# vanidl

./: .gitignore  .gitpod.yml  Notes.MD  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
examples/: Bert.ipynb  CANDLE.ipynb  Climate Seg Benchmark.ipynb  Climate.ipynb  Cosmic Tagger.ipynb  CosmicTagger.ipynb  Cosmoflow.ipynb  FFN.ipynb  FRNN.ipynb  Imagenet.ipynb  l2hmc-qcd.ipynb  mmaADSP.ipynb  report.md
examples/.ipynb_checkpoints/: Cosmic Tagger-checkpoint.ipynb  FFN-checkpoint.ipynb
examples/apps/128/: CANDEL.ipynb  CosmicTagger.ipynb  Cosmoflow.ipynb  FRNN.ipynb  Imagenet.ipynb
examples/apps/8/: CANDEL.ipynb  Climate.ipynb  CosmicTagger.ipynb  Cosmoflow.ipynb  FFN.ipynb  FRNN.ipynb  Imagenet.ipynb
examples/benchmark/128/: CANDEL.ipynb  Climate.ipynb  Imagenet.ipynb
examples/benchmark/8/: CANDEL.ipynb  CosmicTagger-Optimized-Copy1.ipynb  CosmicTagger-Optimized-Copy2.ipynb  CosmicTagger-Optimized-Copy3.ipynb  CosmicTagger-Optimized.ipynb  CosmicTagger.ipynb  Cosmoflow-Optimizer-Copy1.ipynb  Cosmoflow-Optimizer-Copy2.ipynb  Cosmoflow-Optimizer-Copy3.ipynb  Cosmoflow-Optimizer.ipynb  Cosmoflow.ipynb  FFN-Optimized.ipynb  FFN.ipynb  FRNN.ipynb  (+2 more)
src/: constants.py  dlprofile.py  error_code.py  vanidl.py
src/vanidl/: analyzer.py  configuraton.py
src/vanidl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: cosmic_tagging_train.h5  dlprofile_unit_test.py  test.darshan  vanidl_unit_test.py
tests/tb_logs/: events.out.tfevents.1591846902.nid03832.profile-empty
vanidl.egg-info/: PKG-INFO  SOURCES.txt
(+124 files in other folders)
