[metadata]
name = vanidl
version = 0.0.8
author = Hariharan Devarajan
author_email = mani.hariharan@gmail.com
description = VaniDL is an tool for analyzing I/O patterns and behavior with Deep Learning Applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hariharan-devarajan/vanidl
project_urls =
    Bug Tracker = https://github.com/hariharan-devarajan/vanidl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy==1.22.0
	pandas==1.0.5
[options.packages.find]
where = src
